--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,6 @@
         </form>
     </div>
     <div id="result"></div>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
